# Student-Information-System

./: .gitignore  .replit  README.md  _funct_.py  config.py  config.sample.py  main.py  main.pyw  pyproject.toml  requirements.txt
etc/: _funct_.py
