[tool.poetry]
name = "Student Information System"
version = "0.1.1"
description = "This software is designed to manage student iformation database."
authors = ["Matang Mehra <codewritter.1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
colorama = "^0.4.6"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"